terraform.tf
provider "aws" {
  region = "ap-south-1"
}

# --- S3 Bucket ---
resource "aws_s3_bucket" "example_bucket" {
  bucket = "prithaunique"
  acl    = "private"

  tags = {
    Name        = "ExampleBucket"
    Environment = "Dev"
  }
}

resource "aws_s3_bucket_versioning" "versioning" {
  bucket = aws_s3_bucket.example_bucket.id

  versioning_configuration {
    status = "Enabled"
  }
}

resource "aws_s3_bucket_public_access_block" "block_public" {
  bucket = aws_s3_bucket.example_bucket.id

  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

# --- EC2 Instance using default VPC ---
resource "aws_instance" "my_ec2" {
  ami           = "ami-0a1235697f4afa8a4"
  instance_type = "t2.micro"

  tags = {
    Name = "Terraform-EC2-Simple"
  }
}
